<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/location_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_selector"
        android:contentDescription="@string/signinstaff"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/location"
        android:textColor="@drawable/btn_text_color"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/locationState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:drawableTop="@drawable/ic_maps_beenhere"
        
        android:text="@string/locationmsg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationState"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/current_addr_style"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/locationProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentLocation"
        android:layout_centerHorizontal="true"
        style="@style/CustomProgressStyle"
        android:indeterminateDrawable="@drawable/progressbar3"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/locatingState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationProgress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/locating"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/location_btn"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_selector"
        android:contentDescription="@string/signinstaff"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/signin"
        android:textColor="@drawable/btn_text_color"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/success_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableTop="@drawable/success"
        android:text="@string/sign_success"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

</RelativeLayout>